Fix the layout bug on iPad (#34)

--- a/src/styles.css
+++ b/src/styles.css
@@ -131,10 +131,6 @@ h6 {
   background-image: url('/src/assets/bgImages/PurpleBg2025.webp');
 }
 
-.container-wrapping-flip-move > div {
-  columns: 1;
-  column-gap: 0.75rem;
-}
 
 .triangle {
   width: 1rem;
@@ -154,26 +150,33 @@ h6 {
   }
 }
 
-@media (min-width: 1440px) {
-  .container-wrapping-flip-move.show-all-participants > div {
-    columns: 3;
-  }
+.container-wrapping-flipper > div {
+  display: grid;
+  grid-template-columns: 1fr;
+  column-gap: 0.75rem;
 }
 
+/* 3 columns cause reordering issues */
+/* @media (min-width: 1440px) {
+  .container-wrapping-flipper.show-all-participants > div {
+    grid-template-columns: repeat(3, 1fr);
+  }
+} */
+
 @media (min-width: 576px) {
-  .container-wrapping-flip-move > div {
-    columns: 2;
+  .container-wrapping-flipper > div {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (min-width: 768px) {
-  .container-wrapping-flip-move > div {
+  .container-wrapping-flipper > div {
     column-gap: 1rem;
   }
 }
 
 @media (min-width: 1024px) {
-  .container-wrapping-flip-move > div {
+  .container-wrapping-flipper > div {
     column-gap: 1.5rem;
   }
 }
